--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Python-generated files
-__pycache__/
+__pycache__
+.mypy_cache
 *.py[oc]
 build/
 dist/
@@ -8,3 +9,6 @@ wheels/
 
 # Virtual environments
 .venv
+
+# Ruff cache
+.ruff_cache
